# rag-application

./: .dockerignore  .env.example  .env.production  .env.production.template  .gitignore  AUTHENTICATION_FIX.md  CHAT_STORAGE_SETUP.md  DEPLOYMENT_SOLUTIONS.md  Dockerfile  Dockerfile.backend  Dockerfile.gradio  Dockerfile.shiny  INTELLIGENT_CHAT_TITLES.md  Makefile  Procfile  README.md  VERCEL_DEPLOYMENT_GUIDE.md  app_fastapi.py  callbacks.py  docker-compose.yml  exercise.py  exercise2.py  gradio_app.py  ingesting-insurance-act-retrieve.py  ingestion.py  logo_download_agent.py  main.py  mediumblog1.txt  pyproject.toml  quick_check.py  rag_core.py  railway.json  render.yaml  requirements.txt  schemas.py  setup-vercel.sh  shiny_app.py  start dev server  start dev server copy  start dev server.ps1  (+5 more)
.github/: pull_request_template.md
.github/workflows/: deploy.yml  docker.yml
api/: index.py  requirements.txt
data/: README.md
data/_manifests/: ifrs-17.json
data/documents/: README.md
ingestion/: cli.py
ingestion/embeddings/: __init__.py
ingestion/loaders/: __init__.py
ingestion/pipelines/: __init__.py
ingestion/preprocess/: __init__.py
logos/: README.txt
scripts/: audit_namespace.py  cleanup_duplicates.py  cleanup_vectors.py  replace_insurance_act.py  selective_ingest.py  watch_ingestion.py
server/: __init__.py
server/app/: __init__.py  (+1 more)
static/: style.css
tests/: README.md
web/: Dockerfile  Dockerfile.frontend  README.md  next.config.ts  next.config.ts.new  package-lock.json  package.json  pnpm-lock.yaml  setup-supabase.sh  tailwind.config.js
(+47 files in other folders)
