[project]
name = "langchain-langgraph-course"
version = "0.1.0"
description = "A course project for developing AI agents using LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "langchain-pinecone>=0.2.0",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "pinecone>=5.0.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
    "python-dotenv>=1.1.1",
]
